--- a/src/App.css
+++ b/src/App.css
@@ -11,71 +11,54 @@
     --colro-tertiary: #c3b9b1;
   }
 
-body{
-    background-color: var(--color-bg);
-    min-height: 100dvh;
-    width: 100dvw;
-}
-
 body {
     margin: 0;
     font-family: 'Lato', sans-serif;
-    background-color: #f0eae3;
-    color: #392f27;
+    background-color: var(--color-bg);
+    color: var(--color-primary);
   }
   
   .hero {
-    width: 100dvw;
+    max-width: 100dvw;
     min-height: 100dvh;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    background: linear-gradient(to right, #f0eae3 50%, #392f27 50%);
+    background: linear-gradient(to right, var(--color-bg) 50%, var(--color-primary) 50%);
     position: relative;
+  }
+
+  .hero-content{
+    display: flex;
+    flex-wrap: wrap;
+    width: 1000px;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
   }
   
   .hero .text-content {
-    max-width: 50%;
+    flex: 1 1 300px; /* crece, encoge, y mínimo 300px */
+  min-width: 350px;
+  max-width: 500px;
   }
   
   .hero h1 {
+    font-family: "Lato", sans-serif;
+    font-weight: 800;
+    font-style: normal;
     font-size: 3rem;
     margin-bottom: 1rem;
-    color: #392f27;
+    color: var(--color-primary);
   }
   
   .hero p {
     font-size: 1rem;
-    color: #392f27;
-  }
-  
-  .hero .image-content {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .hero .image-content img {
-    max-height: 300px;
-    z-index: 1;
-  }
-  
-  .hero .image-content .badge {
-    position: absolute;
-    top: 30%;
-    left: -60px;
-    background-color: #fff;
-    border: 2px solid #392f27;
-    color: #392f27;
-    padding: 0.5rem 1rem;
-    font-weight: bold;
-    font-size: 0.75rem;
-    z-index: 2;
+    color: var(--color-primary);
   }
   
   .collection {
-    background-color: #ddd8c5;
+    background-color: var(--color-secundary);
     padding: 3rem 2rem;
     text-align: center;
   }
@@ -164,6 +147,11 @@ body {
   @media (max-width: 768px) {
     .hero {
       flex-direction: column;
+      background: var(--color-bg);
+    }
+
+    .hero-content{
+      flex-direction: column;
     }
   
     .hero .text-content,
@@ -172,7 +160,7 @@ body {
       text-align: center;
     }
   
-    .collection .tabs {
+    .collection{
       flex-wrap: wrap;
     }
   }
