--- a/src/App.css
+++ b/src/App.css
@@ -68,20 +68,6 @@ body {
     margin-bottom: 2rem;
   }
   
-  .collection .tabs {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    margin-bottom: 2rem;
-  }
-  
-  .collection .tabs span {
-    cursor: pointer;
-    font-weight: bold;
-    color: #392f27;
-    font-size: 0.85rem;
-  }
-  
   .product-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -89,58 +75,23 @@ body {
     justify-items: center;
   }
   
-  .product-card {
-    background-color: #fff;
-    border: 1px solid #c3b9b1;
-    width: 100%;
-    max-width: 200px;
-    padding-bottom: 1rem;
-    text-align: left;
-    position: relative;
-  }
-  
-  .product-card .tag {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #392f27;
-    color: #fff;
-    font-size: 0.7rem;
-    padding: 0.2rem 0.4rem;
-    font-weight: bold;
-  }
-  
-  .product-card img {
-    width: 100%;
-    object-fit: contain;
-    height: 180px;
-    background-color: #392f27;
-    padding: 1rem;
-  }
-  
-  .product-card .details {
-    padding: 1rem;
-    color: #392f27;
-  }
-  
-  .product-card .details h3 {
-    font-size: 1rem;
-    margin: 0.5rem 0;
-  }
-  
-  .product-card .details .price {
-    font-size: 0.85rem;
-    font-weight: bold;
-  }
-  
   .view-all-btn {
     margin-top: 2rem;
     padding: 0.75rem 1.5rem;
-    background-color: #392f27;
-    color: #fff;
+    background-color: var(--colro-tertiary);
+    color: var(--color-primary);
     border: none;
+    border-radius: 5px;
     font-weight: bold;
     cursor: pointer;
+    transition: .3s ease-in-out;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  }
+
+  .view-all-btn:hover{
+    background-color: var(--color-primary);
+    color: var(--colro-tertiary);
+    transform: scale(1.05);
   }
   
   /* Responsive */
